2017-08-07  Martin Liska  <mliska@suse.cz>

	* config/mips/mips.c: Include attribs.h.

2017-08-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/68829
	* doc/invoke.texi: Document change in behvaior for -Ofast for
	Fortran.

2017-08-07  Wilco Dijkstra  <wdijkstr@arm.com>

	* config/aarch64/aarch64.c (aarch64_pushwb_single_reg):
	Use gen_frame_mem.
	(aarch64_pop_regs): Likewise.
	(aarch64_gen_load_pair): Likewise.
	(aarch64_save_callee_saves): Likewise.
	(aarch64_restore_callee_saves): Likewise.

2017-08-07  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.c: Revert the last change.

2017-08-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81736
	* config/i386/i386.c (ix86_finalize_stack_realign_flags): Renamed
	to ...
	(ix86_finalize_stack_frame_flags): This.  Also clear
	frame_pointer_needed if -fno-omit-frame-pointer is used without
	stack access.
	(ix86_expand_prologue): Replace ix86_finalize_stack_realign_flags
	with ix86_finalize_stack_frame_flags.
	(ix86_expand_epilogue): Likewise.
	(ix86_expand_split_stack_prologue): Likewise.

2017-08-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81743
	* config/i386/i386.c (get_builtin_code_for_version): Set priority
	to P_AES for Westmere.

2017-08-07  Jonathan Yong  <10walls@gmail.com>

	* config/i386/mingw.opt (fset-stack-executable): Removed.
	* config/i386/cygming.opt (fset-stack-executable): Moved
	from mingw.opt.
	* config/i386/cygwin.h: Define CHECK_EXECUTE_STACK_ENABLED.

2017-08-07  Segher Boessenkool  <segher@kernel.crashing.org>

	* print-rtl.c (print_exp): Print NOT as "~" instead of as "!".

2017-08-07  Marek Polacek  <polacek@redhat.com>

	PR middle-end/81737
	* fold-const.c (fold_indirect_ref_1): Check type_domain.

2017-08-07  Martin Liska  <mliska@suse.cz>

	* attribs.h (canonicalize_attr_name): New function.
	(cmp_attribs): Move from c-format.c and adjusted.
	(is_attribute_p): Moved from tree.h.
	* tree-inline.c: Add new includes.
	* tree.c (cmp_attrib_identifiers): Use cmp_attribs.