@@ -1,3 +1,9 @@
+2017-08-07  Tom de Vries  <tom@codesourcery.com>
+
+	PR middle-end/78266
+	* testsuite/libgomp.oacc-c-c++-common/vprop-2.c: New test.
+	* testsuite/libgomp.oacc-c-c++-common/vprop.c: Remove xfail.
+
 2017-07-27  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/45784
